--- a/main.html
+++ b/main.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>	
-	<script>
-		function secondHighest(arr) {
-			//Write your code here
-			
-		}
 
-		function Main() {
-			var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+<script>
+	function secondHighest(arr) {
+		if (arr.length < 2) return -Infinity;
+
+		let first = -Infinity;
+		let second = -Infinity;
+
+		for (let num of arr) {
+			if (num > first) {
+				second = first;
+				first = num;
+			} else if (num < first && num > second) {
+				second = num;
 			}
-			alert(secondHighest(arr));
 		}
-		Main();
-	</script>
 
-    <script type="text/javascript" src="./script.js">
+		return second;
+	}
+
+	function Main() {
+		var n = parseInt(prompt("Enter the number of elements"));
+		var arr = [];
+
+		for (var i = 0; i < n; i++) {
+			arr[i] = parseInt(prompt("Enter element " + (i + 1)));
+		}
+
+		alert("Second Highest: " + secondHighest(arr));
+	}
+
+	Main();
 </script>
 
-</body>
+<script type="text/javascript" src="./script.js"></script>
 
+</body>
 </html>
+
